--- a/src/main/webapp/WEB-INF/jsp/header.jspf
+++ b/src/main/webapp/WEB-INF/jsp/header.jspf
@@ -6,6 +6,13 @@
   To change this template use File | Settings | File Templates.
 --%>
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<div style="background-color: aqua">
-  <h1>header</h1>
-</div>
+<%@taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
+<header class="navbar navbar-inverse">
+    <ul class="list-unstyled pull-right" style="margin: 15px;">
+        <li>
+            <c:if test="${not empty sessionScope.client}">
+                <strong><a href="${pageContext.request.contextPath}/do/logout">logout</a></strong>
+            </c:if>
+        </li>
+    </ul>
+</header>
